--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
     "build": "webpack --config ./webpack.config.js --env mode=prod",
+    "test": "jest",
     "lint": "eslint . --ext .ts",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
@@ -32,6 +33,7 @@
     "eslint-webpack-plugin": "^4.0.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
     "prettier": "^2.8.8",
@@ -44,5 +46,9 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
+  },
+  "dependencies": {
+    "@types/jest": "^29.5.2",
+    "ts-jest": "^29.1.1"
   }
 }
