--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "TypeScript",
     "Modules",
     "Webpack",
+    "SCSS",
     "Jest"
   ],
   "author": "Bukhryakov Oleg<oleg.b9113@gmail.com>",
